--- a/public/locales/de.json
+++ b/public/locales/de.json
@@ -31,8 +31,8 @@
 			"login": "Anmelden",
 			"signup": "Registrieren",
 			"blog": "Blog",
-			"support": "Hilfe!",
-			"docs": "Dokumentation"
+			"support": "Hilfe",
+			"docs": "Entwicklerportal"
 		}
 	},
 	"acknowledgements": {
