--- a/public/locales/meta.json
+++ b/public/locales/meta.json
@@ -14,6 +14,11 @@
 			"code": "de",
 			"status": "complete",
 			"notes": []
+		},
+		{
+			"code": "fi",
+			"status": "incomplete",
+			"notes": ["A work in progress"]
 		}
 	]
 }
