--- a/public/locales/fi.json
+++ b/public/locales/fi.json
@@ -9,7 +9,7 @@
 		]
 	},
 	"_debug": {
-		"title": "This is always translated (FR)"
+		"title": "This is always translated (FI)"
 	},
 	"error": {
 		"forohfor": {
