--- a/public/locales/meta.json
+++ b/public/locales/meta.json
@@ -17,8 +17,8 @@
 		},
 		{
 			"code": "fi",
-			"status": "incomplete",
-			"notes": ["A work in progress"]
+			"status": "complete",
+			"notes": []
 		}
 	]
 }
