--- a/public/locales/fi.json
+++ b/public/locales/fi.json
@@ -9,7 +9,7 @@
 		]
 	},
 	"_debug": {
-		"title": "Dies ist immer übersetzt."
+		"title": "This is always translated."
 	},
 	"error": {
 		"forohfor": {
