--- a/public/locales/fi.json
+++ b/public/locales/fi.json
@@ -14,57 +14,57 @@
 	"error": {
 		"forohfor": {
 			"header": "404 - Sivua ei löytynyt",
-			"message": "Die gesuchte Seite existiert nicht.",
+			"message": "Etsimääsi sivua ei ole olemassa.",
 			"buttons": {
-				"home": "Home",
-				"back": "Zurück"
+				"home": "Etusivu",
+				"back": "Edellinen sivu"
 			}
 		}
 	},
 	"home": {
-		"title": "Heitä pois alustat, jotka eivät välitä!!",
-		"subtitle": "Warum sollte man sich mit weniger zufrieden geben, wenn man eine Plattform haben kann, die sich um einen kümmert? Werde ein Mitglied von Kastel, der Plattform, die sich um dich kümmert!",
-		"subtitle2": "Kastel ist kostenlos, sicher, und funktioniert in deinem Browser, Desktop und Mobilgeräten.",
-		"getStarted": "Los geht's",
-		"download": "Herunterladen für",
+		"title": "Heitä pois alustat, jotka eivät välitä!",
+		"subtitle": "Miksi tyytyä vähempään, kun voit saada alustan, joka välittää sinusta? Liity Kasteliin, alustaan, joka välittää sinusta!",
+		"subtitle2": "Kastel on ilmainen, turvallinen ja toimii selaimessasi sekä tietokoneellasi että mobiililaitteillasi.",
+		"getStarted": "Aloita",
+		"download": "Lataa",
 		"navbar": {
-			"login": "Anmelden",
-			"signup": "Registrieren",
-			"blog": "Blog",
-			"support": "Hilfe",
-			"docs": "Entwicklerportal"
+			"login": "Kirjaudu sisään",
+			"signup": "Rekisteröidy",
+			"blog": "Blogi",
+			"support": "Tuki",
+			"docs": "Kehittäjän sivu"
 		}
 	},
 	"acknowledgements": {
 		"staff": {
-			"title": "Lerne das Staff-Team kennen",
-			"message": "Lerne die Leute kennen, die Kastel ermöglichen."
+			"title": "Tutustu henkilökuntaan",
+			"message": "Ihmisiin, jotka tekevät Kastelin toiminnan mahdolliseksi."
 		},
 		"contributors": {
-			"title": "Mitwirkende",
-			"message": "Die Leute, die Kastel besser machen."
+			"title": "Avustajat",
+			"message": "Ihmiset, jotka auttavat tekemään Kastelista paremman."
 		},
 		"libraries": {
-			"title": "Bibliotheken",
-			"message": "Die Bibliotheken, die Kastel ermöglichen."
+			"title": "Kirjastot",
+			"message": "Ohjelmistot, joiden avulla Kastel on mahdollista."
 		}
 	},
 	"login": {
-		"title": "Willkommen zurück!",
-		"subtitle": "Melde dich an, um fortzufahren.",
+		"title": "Tervetuloa!",
+		"subtitle": "Kirjaudu tilillesi jatkaaksesi.",
 		"email": {
-			"label": "E-Mail",
-			"description": "Die E-Mail-Adresse, mit der du dich angemeldet hast.",
-			"error": "Bitte gib eine gültige E-Mail-Adresse ein."
+			"label": "Sähköposti",
+			"description": "Sähköpostiosoite, jolla rekisteröidyt.",
+			"error": "Kirjoita voimassa oleva sähköpostiosoite.."
 		},
 		"password": {
-			"placeholder": "Gib dein Passwort ein.",
-			"label": "Passwort",
-			"description": "Das Passwort für deinen Account.",
-			"error": "Bitte gib ein gültiges Passwort ein."
+			"placeholder": "Syötä salasanasi",
+			"label": "Salasana",
+			"description": "Tilisi salasan.",
+			"error": "Virheelliset kirjautumistiedot."
 		},
-		"register": "Du hast keinen Account? Registrieren",
-		"forgot": "Passwort vergessen?",
-		"button": "Anmelden"
+		"register": "Eikö sinulla ole tiliä? Rekisteröidy",
+		"forgot": "Unohditko salasanan?",
+		"button": "Kirjaudu sisään"
 	}
 }
