--- a/public/locales/ar.json
+++ b/public/locales/ar.json
@@ -1,1 +1,14 @@
-
+{
+	"_meta": {
+		"name": "Arabic",
+		"code": "ar",
+		"contributors": [
+			{
+				"name": ""
+			}
+		]
+	},
+	"_debug": {
+		"title": "Dies ist immer übersetzt."
+	}
+}
