--- a/public/locales/meta.json
+++ b/public/locales/meta.json
@@ -24,6 +24,11 @@
 			"code": "ar",
 			"status": "Work in progress",
 			"notes": []
+		},
+		{
+			"code": "hi",
+			"status": "Work in progress",
+			"notes": []
 		}
 	]
 }
